# english2french

./: .gitignore  README.md  encoder_decoder.ipynb  encoder_decoder_2.ipynb  encoder_decoder_attention.ipynb  eng_vectors.pt  pyproject.toml  transformer.ipynb  word2index_eng.pkl  word2index_fr.pkl  word2vec.ipynb
