[project]
name = "eng2french"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
]
